CSS: Fixed overflow of code

--- a/source/assets/stylesheets/index.css.scss
+++ b/source/assets/stylesheets/index.css.scss
@@ -93,13 +93,15 @@ header {
 pre, code.prettyprint {
     font-size: 0.9rem;
     font-family: "Hack", "Source Code Pro", monospace;
-    overflow-y: auto;
     color: $base03;
     border: 1px solid $base04;
     margin: 0;
     padding: 5px;
+    overflow-y: auto;
+    
     & > code {
         display: block;
+        overflow-x: auto;
     }
 }
 
@@ -132,7 +134,6 @@ pre, code.prettyprint {
     margin-top: 5px;
     transform-origin: top center;
     overflow-y: auto;
-    
     &.open {
         animation: 1s open-preview ease forwards;
     }
@@ -147,6 +148,7 @@ pre, code.prettyprint {
         padding: 0;
         & > code {
             padding: 5px;
+            overflow-x: auto;
         }
     }
 }
